--- a/hosts_status.yml
+++ b/hosts_status.yml
@@ -7,6 +7,8 @@
     headers:
       Content-Type: "application/json"
       Accept: "application/json"
+    unifi_api_key: "{{ lookup('env', 'UNIFI_API_KEY') | default(unifi_api_key, true) }}"
+    discord_webhook_url: "{{ lookup('env', 'DISCORD_WEBHOOK_URL') | default(discord_webhook_url, true) }}"
   tasks:
   - name: Hosts requests
     unifi_api:
@@ -53,3 +55,4 @@
     debug:
       msg: "Discord notification sent successfully"
     when: discord_response.status in [200, 204]
+
